"增加第一篇C++八股文的内容"

--- a/_pages/2025-08-11-C++八股文(一).md
+++ b/_pages/2025-08-11-C++八股文(一).md
@@ -48,3 +48,40 @@ layout: post
 这个问题，我在网络编程的时候很费解，为什么io_context、socket和acceptor等不允许拷贝，所有我需要用`std::move()`去转移对象的控制权。老实说，我目前理解为两点：
 - **性能优化，减少不必要的拷贝**
 - **资源唯一性**
+
+# 7.new/delete和malloc/free的区别
+new和delete是C++的运算符，new先分配足够大的内存再调用构造函数，delete则是调用析构函数；malloc/free仅仅是申请/释放内存
+
+# 8.const和static的作用
+const：
+
+- **定义常量**
+- **修饰形参、返回值**
+- **常量成员变量和常量成员函数**
+
+static：
+
+- **单例模式**
+- **静态（全局/局部）变量**
+- **静态成员变量和静态成员函数**
+
+# 9.main()函数执行前的操作
+main()会解析命令行的参数：
+- **argc：argument count，表示字符串的数量**
+- **argv：argument vector，表示的是一个二维数组，每个数组存储字符串，总共有argc个数组**  
+例如："./a.exe -p -f -c"
+
+        argc = 4
+        argv[0] = ./a.exe
+        argv[1] = -p
+        argv[2] = -f
+        argv[3] = -f
+
+# 10.inline的要求
+1.简单小型的函数
+
+2.写在头文件的
+
+3.写在类的头文件的函数默认内联
+
+......
