"修改部分地方"

--- a/_pages/2025-08-11-C++八股文(一).md
+++ b/_pages/2025-08-11-C++八股文(一).md
@@ -24,7 +24,7 @@ layout: post
 - **构造的时候，先构造基类在构造派生类**
 - **析构的时候，先析构派生类再析构子类**   
 
-想象着，如果在派生类的构造函数里用到了基类的成员变量，如果先构造派生类，那么此时基类是未被初始化的，所有是非法访问；同理析构也是如此。
+想象着，如果在派生类的构造函数里用到了基类的成员变量，如果先构造派生类，那么此时基类是未被初始化的，所以是非法访问；同理析构也是如此。
 
 # 3.如何解决多态情况下派生类无法析构的问题
 将基类的析构函数设置为虚函数即可，一般有继承的情况下都设置为虚函数，当然这也会增加类大小。这是因为：
@@ -53,13 +53,13 @@ layout: post
 new和delete是C++的运算符，new先分配足够大的内存再调用构造函数，delete则是调用析构函数；malloc/free仅仅是申请/释放内存
 
 # 8.const和static的作用
-const：
+**const：**
 
 - **定义常量**
 - **修饰形参、返回值**
 - **常量成员变量和常量成员函数**
 
-static：
+**static：**
 
 - **单例模式**
 - **静态（全局/局部）变量**
@@ -71,17 +71,17 @@ main()会解析命令行的参数：
 - **argv：argument vector，表示的是一个二维数组，每个数组存储字符串，总共有argc个数组**  
 例如："./a.exe -p -f -c"
 
-        argc = 4
-        argv[0] = ./a.exe
-        argv[1] = -p
-        argv[2] = -f
-        argv[3] = -f
+    > **argc = 4**  
+    > **argv[0] = ./a.exe**  
+    > **argv[1] = -p**  
+    > **argv[2] = -f**  
+    > **argv[3] = -f**  
 
 # 10.inline的要求
 1.简单小型的函数
 
 2.写在头文件的
 
-3.写在类的头文件的函数默认内联
+3.写在头文件的类的函数默认内联
 
 ......
