"删除C++八股文(二)合并到C++八股文.md， 并且新增git命令.md、Qt八股文.md、C++网络编程.md"

--- a/_pages/2025-08-11-C++八股文.md
+++ b/_pages/2025-08-11-C++八股文.md
@@ -1,5 +1,5 @@
 ---
-title: C++八股文(一)
+title: C++八股文
 author: 齐兆龙
 date: 2025-08-11
 category: C++
@@ -84,4 +84,33 @@ main()会解析命令行的参数：
 
 3.写在头文件的类的函数默认内联
 
-......
+# 11.左值和右值表示什么
+- **左值：表示长期存在的值(持久对象)，例如变量**
+- **右值：表示即将消亡的临时值(临时对象)，例如返回值，一个数，表达式结果等**
+
+# 12.C++11有哪些高级特性
+**1.智能指针**
+
+**2.自动推导（auto、decltype）**
+
+**3右值引用和移动语义**
+
+**4.范围for循环**
+
+**5.多线程std::thread**
+
+**6.Lambda表达式**
+
+**7.原子操作std::atomic**
+
+# 13.指针指针有哪些及其应用场景
+**1.share_ptr：引用计数共享**
+
+**2.unique_ptr：独占所有权**
+
+**3.weak_ptr：配合share_ptr，解决循环引用的**
+
+目前智能指针用得还不多，理解没那么深，以后再补充。
+
+# 14.++i和i++的区别
+++i是前置递增运算符，表示先自增1，再返回新值(次数已经加1了)；i++是后置递增运算符，表示先返回原值(未自增的值)，再进行自增1。\*(ptr++)和*(++ptr)的区别类型，前者解引用旧指针，后置解引用新指针。
