"增加了Qt和网络编程的一些内容"

--- a/_pages/2025-08-18-C++网络编程.md
+++ b/_pages/2025-08-18-C++网络编程.md
@@ -19,4 +19,17 @@ UDP不用连接且快速，但是不保证顺序。
 
 **3.客户端收到，发送ACK=1，并且携带确认号(服务器初始序列号+1)，完成连接。**
 
-# 2.
+# 2.C++线程池设计，需要考虑哪些点
+- **任务队列的线程安全(使用互斥锁或者无锁队列)**
+
+- **工作线程的负载均衡(空闲线程主动从任务队列拉取任务或者直接挂起)**
+
+- **任务优先级**
+
+- **避免虚假唤醒(使用条件变量)**
+
+- **优雅的启动和停止线程池(等待所有线程完成后再退出)**
+
+- **异常处理**
+
+# 3.
