--- a/_pages/2025-08-18-Qt八股文.md
+++ b/_pages/2025-08-18-Qt八股文.md
@@ -14,3 +14,45 @@ Qt的基于C++的跨平台应用开发框架。核心机制有：信号槽、对
 通过父子关系自动管理QObject以及其派生类的生命周期。主要是构造函数传递父对象指针，当父对象析构时，自动对其子对象进行析构。
 
 # 3.QT的信号槽机制
+用于对象间通信，是一种回调机制；用关键字signal声明信号，用slots声明槽函数，槽函数必须要有定义，否则编译报错。要使用槽函数一般需要继承QObject以及包含Q_OBJECT宏，信号槽支持跨线程通信。第五个参数有：
+
+**1.默认连接**
+**2.QueuedConnection**
+**3.DirectConnection**
+**4.BlockQueuedConnection**
+**5.UniqueConnection**
+
+我自己默认连接和QueuedConnection用的多一些，特别是在跨线程是用第二种。
+
+# 4.model/view机制和优缺点
+model/view机制是一种数据和视图分离机制，model负责数据的存储和访问，view负责数据的显示和渲染；model继承QAbstractItemModel，view一般用QListView、QTableView和QTreeView等。定制的时候可用委托delegate进行定制，比如设置QLineEdit可编辑等。
+
+优点：解耦界面和数据。
+缺点：性能消耗，特别是频繁更新view时。
+
+# 5.Qt为什么不可以跨线程操作GUI
+绝对不要，因为Qt的底层GUI系统通常不是线程安全的。
+
+# 6.Qt的多线程通信有哪些？
+**1.信号槽**
+
+**2.QMetaOBject::invokeMethod**
+
+**3.事件系统**
+
+**4.共享内存QSharedMemory**
+
+**5.TCP/IP(QLocalSoket/QTcpSocket)**
+
+**6.QMutex和QWaitCondition**
+
+**......**
+
+# 7.Qt的进程通信有哪些
+**1.QLocalSocket和QLocalServer**
+
+**2.QTCPSocket和QUDPSocket**
+
+**3.共享内存QSharedMemory**
+
+**......**
