--- a/_posts/2025-08-18-git命令.md
+++ b/_posts/2025-08-18-git命令.md
@@ -13,3 +13,6 @@ layout: post
 
 # 2.提交
 `git push`
+
+# 3.设置git全局
+`git config --global core.sshCommand "ssh -F ~/.ssh/config -o Hostname=ssh.github.com -o Port=443 -o IdentityFile=/c/Users/你的用户名/.ssh/id_ed25519 -v"`
