"新增面试题内容"

--- a/_pages/2025-09-05-C++笔试.md
+++ b/_pages/2025-09-05-C++笔试.md
@@ -16,4 +16,68 @@ layout: post
 
 `int* p = 1; if(var == nullptr) {...}`
 
-# 2.
+# 2.写出下列字节数
+```char carry[100] = "Hello World";
+char *pstr = "Hello World";
+Base b1;
+
+int Base::SizeOf(char p[])
+{
+    return sizeof(p);
+}
+
+int Base::SizeOf2(char *p)
+{
+    return sizeof(p);
+}
+```
+
+sizeof(carry) ---     **100**
+
+sizeof(pstr)  ---     **4/8**
+
+sizeof(*pstr)   ---   **1**
+
+b1.SizeOf(carry) ---  **4/8**
+
+b1.SizeOf2(carry) --- **4/8**
+
+carry[100],返回的是数组总大小，而char在计算中中是一个字节；pstr是指针，指针在64位系统或者32位系统中是8或4个字节；*pstr是指针指向的第一个char类型元素，为1个字节；char p[]退化为指针，和SizeOf2一样的，8或4个字节。
+
+# 3.int a = 3; int b = a << 3;a和b等于多少？
+左移n位相当于乘以2的n次方，右移n位相当于除以2的n次方并向下取整（考虑负数，负数向负无穷方向）。负数的二进制为原码取反后最低位+1。
+
+例如 a = 0000 0011，左移3位后为0001 1000(16+8=24)(3*8=24)。假设有12 = 0000 1100，原码取反后+1得到：-12 = 1111 0100，右移2位为1111 1101。反推回去，先-1得到1111 1100，再取反0000 0011(3)；如果按照规律直接计算是-12/4 = -3。
+
+# 4.在32位系统中，char类型占多少字节？int、short、long以及指针呢？64位系统呢？
+大多数机器一个字节是由8个bit组成：
+| 类型 |  bit | 32位 | 64位 |
+|------|------|------|------|
+| char |  8bit | 1字节   | 1字节 |
+| int |  32bit | 4字节   | 4字节 |
+| short |  16bit | 2字节   | 2字节 |
+| long |  32bit | 4字节   | 4字节 |
+| 指针 |  32/64bit | 4字节   | 8字节 |
+| float |  32bit | 4字节   | 4字节 |
+| double |  64bit | 8字节   | 8字节 |
+
+# 5.写一个标准宏或者模板，返回较小的那个
+宏：
+
+`#define MIN(a,b) ((a) < (b)? (a) : (b))`
+
+模板：
+```
+template<typename T>
+const T& min(const T& a, const T& b){
+    return (a < b)? a : b;
+}
+```
+# 6.写一个算法对1，8，5，2，4，9，7，6，3，0进行顺序排列
+使用快速排序，运用双指针和递归
+```
+void quickSort(std::vector& nums, int left, int right)
+{
+
+}
+```
