--- a/_pages/2025-08-14-C++并发编程.md
+++ b/_pages/2025-08-14-C++并发编程.md
@@ -17,3 +17,6 @@ layout: post
 
 # 3.什么情况下会导致死锁
 A等待B释放锁，B等待A释放锁，就形成死锁。
+
+# 4.在一个线程中sleep(1000)，将使得该线程在多少时间后获得CPU的控制(假设睡眠过程中不会有其他事件唤醒该线程)？
+大于等于1000ms，一般多15ms左右，取决于系统调度和时钟精度。
