"增加笔试题"

--- a/_pages/2025-09-05-C++笔试.md
+++ b/_pages/2025-09-05-C++笔试.md
@@ -77,8 +77,119 @@ const T& min(const T& a, const T& b){
 # 6.写一个算法对1，8，5，2，4，9，7，6，3，0进行顺序排列
 使用快速排序，运用双指针和递归
 ```cpp
-void quickSort(std::vector& nums, int left, int right)
+void quickSort1(std::vector& nums, int left, int right)
 {
+    if(left >= right)
+        return;
+
+    int pivot = nums[left + (right-left)/2];
+    int i = left, j = right;
+    while(i <= j)
+    {
+        while(num[i] < pivot) i++;
+        while(num[j] > pivot) j--;
+        if(i <= j)
+        {
+            std::swap(num[i], num[j]);
+            i++;
+            j--;
+        }
+    }
+
+    quickSort(nums, left, j);
+    quickSort(nums, i, right);
+}
+
+下面是i==j情况下不交换的，AI验证可行，实际不清楚
+void quickSort2(std::vector& nums, int left, int right)
+{
+    if(left >= right)
+        return;
+
+    int pivot = nums[left + (right-left)/2];
+    int i = left, j = right;
+    while(i < j) //i==j的时候退出
+    {
+        while(num[i] < pivot) i++;
+        while(num[j] > pivot) j--;
+        if(i < j)
+        {
+            std::swap(num[i], num[j]);
+            i++;
+            j--;
+        }
+    }
+    //相比较之前少交换一次，既然i==j==基准，那么就去掉基准值，分左右两边递归
+
+    quickSort(nums, left, i-1);
+    quickSort(nums, j+1, right);
+}
+```
+
+# 7.如何区分本机字节序
+**小端序(低字节存低地址)：**  
+地址：　　低地址 → 高地址  
+字节：　　0x01　　0x00　　0x00　　0x00  
+　　　　　↑  
+　　　　　char*指针指向这里，值为1
+
+**大端序(高字节存低地址)：**  
+地址：　　低地址 → 高地址  
+字节：　　0x00　　0x00　　0x00　　0x01  
+　　　　　↑  
+　　　　　char*指针指向这里，值为0
+```cpp
+//&num：获取num的地址（int*类型）
+//(char*)&num：强制转换为char*类型（指向第一个字节）
+//*(char*)&num：解引用，得到第一个字节的值
+//大多数现代计算机（x86、x86-64架构）都是小端序，而网络字节序通常是大端序。
+bool is_big_endian() {
+    int num = 1；
+    if(*(char*)&num == 1)
+    {
+        Return “小端序”；
+    }
+    else
+    {
+        Return “大端序”；
+    }
 
 }
+```
+
+# 8.一种线程安全的单例模式（多线程模式）
+## C++ 11之后，static局部变量线程安全，可以用梅耶单例
+```cpp
+static T& GetInstanc(){
+    static T m_instance;
+    return m_instance;
+}
+```
+## 单例模板
+```cpp
+template <typename T>
+class singleton
+{
+
+protected:
+    singleton() = default;
+    singleton(const singleton& other) = delete;
+    singleton& operator=(const singleton& other) = delete;
+
+public:
+    static T& instance()
+    {
+        static T ins;
+        return ins;
+    }
+
+    virtual ~singleton() = default;
+
+};
+
+//继承时,friend class singleton<A>; 是为了让基类模板能够访问派生类的私有构造函数(默认)，从而完成单例对象的创建。这是CRTP（奇异递归模板模式）中常见的技巧。
+class A : public singleton<A>
+{
+    friend class singleton<A>;
+};
 ```
