--- a/_pages/2025-08-11-C++八股文.md
+++ b/_pages/2025-08-11-C++八股文.md
@@ -114,3 +114,6 @@ main()会解析命令行的参数：
 
 # 14.++i和i++的区别
 ++i是前置递增运算符，表示先自增1，再返回新值(次数已经加1了)；i++是后置递增运算符，表示先返回原值(未自增的值)，再进行自增1。\*(ptr++)和*(++ptr)的区别类型，前者解引用旧指针，后置解引用新指针。
+
+# 15.静态全局变量和全局变量的区别
+静态全局变量只能在当前文件使用，全局变量可以通过extern所有文件都可以使用。单例模式是通过公共静态方法，以及包含头文件可供所有文件使用。
