"新增算法总结"

--- a/_pages/2025-09-20-QObject源码阅读笔记.md
+++ b/_pages/2025-09-20-QObject源码阅读笔记.md
@@ -189,7 +189,7 @@ static bool check_parent_thread(QObject *parent,
 
 - 构造QOBjectPrivate
 - QObject的d_ptr指向QOBjectPrivate对象
-- 父对象证同测试
+- 父对象证同检查
 - QObjectPrivate的q_ptr指针指向this，完成双向指针关系
 - 线程检查，不允许在不同于父对象的线程中创建子对象
 - 设置父对象，以及将自己添加到父对象的children列表里
@@ -312,6 +312,217 @@ if (d->declarativeData) {
 **代码的具体细节先不深究，先掌握其脉络。**
 
 # 信号和槽
+之前我用的是Qt4的版本，信号槽的两个宏我想看下：
+
+```cpp
+Q_CORE_EXPORT const char *qFlagLocation(const char *method);
+
+#ifndef QT_NO_META_MACROS
+#ifndef QT_NO_DEBUG
+# define QLOCATION "\0" __FILE__ ":" QT_STRINGIFY(__LINE__)
+# ifndef QT_NO_KEYWORDS
+#  define METHOD(a)   qFlagLocation("0"#a QLOCATION)
+# endif
+# define SLOT(a)     qFlagLocation("1"#a QLOCATION)
+# define SIGNAL(a)   qFlagLocation("2"#a QLOCATION)
+#else
+# ifndef QT_NO_KEYWORDS
+#  define METHOD(a)   "0"#a
+# endif
+# define SLOT(a)     "1"#a
+# define SIGNAL(a)   "2"#a
+#endif
+```
+上面是调试模式，下面是发布模式。调试模式多一些调试信息，本质就是：
+- 前面加"0"表示普通方法，"1"表示槽，"2"表示信号。
+
+- SLOT和SIGNAL宏，就是将方法名加上前缀拼接在一起。
+
+信号槽主要有下面的这些接口（只贴常用的）：
+```cpp
+    //Qt4版本的信号槽，可以看到signal和slot都是char类型，例如：
+    //connect(ui->button, SIGNAL(clicked()), this, SLOT(onClicked()));
+    static QMetaObject::Connection connect(const QObject *sender, const char *signal,
+                        const QObject *receiver, const char *member, Qt::ConnectionType = Qt::AutoConnection);
+
+    //将信号连接到指向QObject成员函数的指针，例如：
+    //connect(ui->button, &QPushButton::clicked, this, &MainWindow::onClicked);
+    template <typename Func1, typename Func2>
+    static inline QMetaObject::Connection connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal,
+                                     const typename QtPrivate::FunctionPointer<Func2>::Object *receiver, Func2 slot,
+                                     Qt::ConnectionType type = Qt::AutoConnection)
+    {
+        typedef QtPrivate::FunctionPointer<Func1> SignalType;
+        typedef QtPrivate::FunctionPointer<Func2> SlotType;
+
+        Q_STATIC_ASSERT_X(QtPrivate::HasQ_OBJECT_Macro<typename SignalType::Object>::Value,
+                          "No Q_OBJECT in the class with the signal");
+
+        //compilation error if the arguments does not match.
+        Q_STATIC_ASSERT_X(int(SignalType::ArgumentCount) >= int(SlotType::ArgumentCount),
+                          "The slot requires more arguments than the signal provides.");
+        Q_STATIC_ASSERT_X((QtPrivate::CheckCompatibleArguments<typename SignalType::Arguments, typename SlotType::Arguments>::value),
+                          "Signal and slot arguments are not compatible.");
+        Q_STATIC_ASSERT_X((QtPrivate::AreArgumentsCompatible<typename SlotType::ReturnType, typename SignalType::ReturnType>::value),
+                          "Return type of the slot is not compatible with the return type of the signal.");
+
+        const int *types = nullptr;
+        if (type == Qt::QueuedConnection || type == Qt::BlockingQueuedConnection)
+            types = QtPrivate::ConnectionTypes<typename SignalType::Arguments>::types();
+
+        return connectImpl(sender, reinterpret_cast<void **>(&signal),
+                           receiver, reinterpret_cast<void **>(&slot),
+                           new QtPrivate::QSlotObject<Func2, typename QtPrivate::List_Left<typename SignalType::Arguments, SlotType::ArgumentCount>::Value,
+                                           typename SignalType::ReturnType>(slot),
+                            type, types, &SignalType::Object::staticMetaObject);
+    }
+
+    //连接到一个函数指针（不是成员），例如：
+    //void globalHandler() { /*...*/ }
+    //connect(ui->button, &QPushButton::clicked, globalHandler);
+    template <typename Func1, typename Func2>
+    static inline typename std::enable_if<int(QtPrivate::FunctionPointer<Func2>::ArgumentCount) >= 0, QMetaObject::Connection>::type
+            connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal, Func2 slot)
+    {
+        return connect(sender, signal, sender, slot, Qt::DirectConnection);
+    }
+
+    //连接到一个函数指针（不是成员），例如：
+    //void globalHandler() { /*...*/ }
+    //connect(ui->button, &QPushButton::clicked, this, globalHandler);
+    template <typename Func1, typename Func2>
+    static inline typename std::enable_if<int(QtPrivate::FunctionPointer<Func2>::ArgumentCount) >= 0 &&
+                                          !QtPrivate::FunctionPointer<Func2>::IsPointerToMemberFunction, QMetaObject::Connection>::type
+            connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal, const QObject *context, Func2 slot,
+                    Qt::ConnectionType type = Qt::AutoConnection)
+    {
+        typedef QtPrivate::FunctionPointer<Func1> SignalType;
+        typedef QtPrivate::FunctionPointer<Func2> SlotType;
+
+        Q_STATIC_ASSERT_X(QtPrivate::HasQ_OBJECT_Macro<typename SignalType::Object>::Value,
+                          "No Q_OBJECT in the class with the signal");
+
+        //compilation error if the arguments does not match.
+        Q_STATIC_ASSERT_X(int(SignalType::ArgumentCount) >= int(SlotType::ArgumentCount),
+                          "The slot requires more arguments than the signal provides.");
+        Q_STATIC_ASSERT_X((QtPrivate::CheckCompatibleArguments<typename SignalType::Arguments, typename SlotType::Arguments>::value),
+                          "Signal and slot arguments are not compatible.");
+        Q_STATIC_ASSERT_X((QtPrivate::AreArgumentsCompatible<typename SlotType::ReturnType, typename SignalType::ReturnType>::value),
+                          "Return type of the slot is not compatible with the return type of the signal.");
+
+        const int *types = nullptr;
+        if (type == Qt::QueuedConnection || type == Qt::BlockingQueuedConnection)
+            types = QtPrivate::ConnectionTypes<typename SignalType::Arguments>::types();
+
+        return connectImpl(sender, reinterpret_cast<void **>(&signal), context, nullptr,
+                           new QtPrivate::QStaticSlotObject<Func2,
+                                                 typename QtPrivate::List_Left<typename SignalType::Arguments, SlotType::ArgumentCount>::Value,
+                                                 typename SignalType::ReturnType>(slot),
+                           type, types, &SignalType::Object::staticMetaObject);
+    }
+
+    /*连接到Functor/Lambda表达式，例如：
+    connect(ui->button, &QPushButton::clicked, [this](){
+        this->doSomething();
+    });
+    */
+    template <typename Func1, typename Func2>
+    static inline typename std::enable_if<QtPrivate::FunctionPointer<Func2>::ArgumentCount == -1, QMetaObject::Connection>::type
+            connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal, Func2 slot)
+    {
+        return connect(sender, signal, sender, std::move(slot), Qt::DirectConnection);
+    }
+
+    /*连接到Functor/Lambda表达式，例如：
+    connect(ui->button, &QPushButton::clicked, this, [this](){
+        this->doSomething();
+    });
+    */
+    template <typename Func1, typename Func2>
+    static inline typename std::enable_if<QtPrivate::FunctionPointer<Func2>::ArgumentCount == -1, QMetaObject::Connection>::type
+            connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal, const QObject *context, Func2 slot,
+                    Qt::ConnectionType type = Qt::AutoConnection)
+    {
+        typedef QtPrivate::FunctionPointer<Func1> SignalType;
+        const int FunctorArgumentCount = QtPrivate::ComputeFunctorArgumentCount<Func2 , typename SignalType::Arguments>::Value;
+
+        Q_STATIC_ASSERT_X((FunctorArgumentCount >= 0),
+                          "Signal and slot arguments are not compatible.");
+        const int SlotArgumentCount = (FunctorArgumentCount >= 0) ? FunctorArgumentCount : 0;
+        typedef typename QtPrivate::FunctorReturnType<Func2, typename QtPrivate::List_Left<typename SignalType::Arguments, SlotArgumentCount>::Value>::Value SlotReturnType;
+
+        Q_STATIC_ASSERT_X((QtPrivate::AreArgumentsCompatible<SlotReturnType, typename SignalType::ReturnType>::value),
+                          "Return type of the slot is not compatible with the return type of the signal.");
+
+        Q_STATIC_ASSERT_X(QtPrivate::HasQ_OBJECT_Macro<typename SignalType::Object>::Value,
+                          "No Q_OBJECT in the class with the signal");
+
+        const int *types = nullptr;
+        if (type == Qt::QueuedConnection || type == Qt::BlockingQueuedConnection)
+            types = QtPrivate::ConnectionTypes<typename SignalType::Arguments>::types();
+
+        return connectImpl(sender, reinterpret_cast<void **>(&signal), context, nullptr,
+                           new QtPrivate::QFunctorSlotObject<Func2, SlotArgumentCount,
+                                typename QtPrivate::List_Left<typename SignalType::Arguments, SlotArgumentCount>::Value,
+                                typename SignalType::ReturnType>(std::move(slot)),
+                           type, types, &SignalType::Object::staticMetaObject);
+    }                
+```
+总结下来：
+- Qt4旧时代的连接，需要用宏SLOT和SIGNAL包裹
+- 连接指向QObject的成员函数指针
+- 连接到普通函数指针，没有上下文，默认receiver为sender
+- 连接到普通函数指针，有上下文，即receiver可指定
+- 连接到Functor/Lambda表达式，没有上下文，默认receiver为sender
+- 连接到Functor/Lambda表达式，有上下文，即receiver可指定
+
+## FunctionPointer - 特征提取器
+```cpp
+    /*
+    FunctionPointer<Func> 结构是一个用于函数指针的类型特性。
+    - ArgumentCount 是参数的数量，如果未知则为 -1
+    - Object 类型定义是指向成员函数的指针的对象
+    - Arguments 类型定义是参数列表（在 QtPrivate::List 中）
+    - Function 类型定义是模板参数 Func 的别名
+    - call<Args, R>(f, o, args) 方法用于调用该槽函数
+        Args 是信号的参数列表
+        R 是信号的返回类型f 是函数指针
+        o 是接收者对象
+        args 是指向参数的指针数组，如在 qt_metacall 中使用
+    Functor<Func, N> 结构是调用 N 个参数的函数对象的助手。它的调用函数与 FunctionPointer::call 函数相同。
+    */
+    template<class Obj, typename Ret, typename... Args> struct FunctionPointer<Ret (Obj::*) (Args...)>
+    {
+        typedef Obj Object;// 提取类类型
+        typedef List<Args...>  Arguments;// 提取参数列表
+        typedef Ret ReturnType;// 提取返回类型
+        typedef Ret (Obj::*Function) (Args...);//等同于using Function = Ret (Obj::*)(Args...)，表示Function是一个成员函数指针类型
+        enum {ArgumentCount = sizeof...(Args), IsPointerToMemberFunction = true};
+        // 生成统一调用接口
+        template <typename SignalArgs, typename R>
+        static void call(Function f, Obj *o, void **arg) {
+            // 委托给FunctorCall具体执行
+            FunctorCall<typename Indexes<ArgumentCount>::Value, SignalArgs, R, Function>::call(f, o, arg);
+        }
+    };
+```
+FunctionPointer是一个函数特征提取器，它通过模板特化机制分析函数签名，提取关键信息包括：所属类、返回类型、参数列表等，并将这些信息保存为类型别名和枚举值。同时，它生成一个统一的call回调模板函数，为后续的泛化调用提供接口。
+
+在调用FunctorCall之前，需要通过Indexes<ArgumentCount>::Value生成一个编译时的索引序列。这个过程的核心是生成从0到ArgumentCount-1的整数序列（如 IndexesList<0,1,2>），为后续的参数展开提供位置索引。
+
+这里采用分治策略而非简单循环的原因在于编译期计算的约束：编译期没有循环语句可用，只能通过递归实现，而分治算法将递归深度从O(N)优化到O(logN)，避免了编译器递归深度限制的问题。具体来说，算法将序列生成任务拆分为两个子序列（N/2 和 N-N/2），分别递归生成后再进行合并，通过偏移计算确保索引连续性。
+
+## FunctorCall - 代码生成器
+```cpp
+    template <int... II, typename... SignalArgs, typename R, typename... SlotArgs, typename SlotRet, class Obj>
+    struct FunctorCall<IndexesList<II...>, List<SignalArgs...>, R, SlotRet (Obj::*)(SlotArgs...)> {
+        static void call(SlotRet (Obj::*f)(SlotArgs...), Obj *o, void **arg) {
+            (o->*f)((*reinterpret_cast<typename RemoveRef<SignalArgs>::Type *>(arg[II+1]))...), ApplyReturnValue<R>(arg[0]);
+        }
+    };
+```
+
+
 
 # 事件系统
 
