继续阅读QObject源码

--- a/_pages/2025-08-11-C++八股文.md
+++ b/_pages/2025-08-11-C++八股文.md
@@ -117,3 +117,19 @@ main()会解析命令行的参数：
 
 # 15.静态全局变量和全局变量的区别
 静态全局变量只能在当前文件使用，全局变量可以通过extern所有文件都可以使用。单例模式是通过公共静态方法，以及包含头文件可供所有文件使用。
+
+# 16.typename在模板中使用
+1. 声明模板类型参数
+```cpp
+template<typename T>  // 这里的typename表示T是一个类型
+class Container {
+    T value;          // T是明确的类型
+};
+```
+2. 依赖名称，明确告诉编译器这个标识符是某个类型，确保模板实例的时候能正确解析依赖
+```cpp
+template<typename T>
+class MyClass {
+    typename T::SubType member;  // 这里的typename告诉编译器T::SubType是类型
+};
+```
