--- a/_pages/2025-09-25-常用算法总结.md
+++ b/_pages/2025-09-25-常用算法总结.md
@@ -2,12 +2,20 @@
 title: 常用算法总结
 author: 齐兆龙
 date: 2025-09-25
-category: 思想
+category: 算法
 layout: post
 ---
 
 ---
 
-# 快速排序
-
 # 分治策略
+适合于：
+- 能够分解嘛 -> 问题能分解为几个相似的小问题嘛
+  
+- 能独立解决嘛 -> 子问题直接的依赖简单嘛
+
+- 能轻松合并嘛 -> 合并结果比直接解决更简单嘛
+
+分治会产生多个子问题，而普通递归通常只有一个递归调用路径。
+
+## 快速排序
