--- a/_posts/2025-08-18-git_svn命令.md
+++ b/_posts/2025-08-18-git_svn命令.md
@@ -28,3 +28,9 @@ layout: post
 
 # 7.克隆/下载
 `git clone https://github.com/bigmasterQi/bigmasterQi.github.io.git`   ---   `svn co`  
+
+# 8.查看分支
+`git branch`
+
+# 9.切换分支
+`git switch 分支名`
