--- a/_pages/2025-09-20-QObject源码阅读笔记.md
+++ b/_pages/2025-09-20-QObject源码阅读笔记.md
@@ -739,6 +739,12 @@ QObject::connectImpl做了以下几件事：
 - 从当前元对象开始，往上(父元对象)查找，直到找到信号的索引且没超出信号索引边界；没找到报warning
 - 遍历所有祖先类（不包括当前类本身），累加父类的信号数量，signalOffset计算的是当前类的所有父类的信号总数，从而得到信号偏移量
 
+QObjectPrivate::connectImpl做了以下几件事：
+- 检查关键参数是否为空
+- 检查是否已经存在该连接，若有则取消连接操作，避免重复
+- 创建连接数据对象，注册基本信息，处理线程数据
+- 注册连接到发送者，转移所有权，解锁
+
 # 事件系统
 
 # 对象树
