"新增一些面试题"

--- a/_pages/2025-08-11-C++八股文.md
+++ b/_pages/2025-08-11-C++八股文.md
@@ -27,6 +27,7 @@ layout: post
 想象着，如果在派生类的构造函数里用到了基类的成员变量，如果先构造派生类，那么此时基类是未被初始化的，所以是非法访问；同理析构也是如此。
 
 # 3.如何解决多态情况下派生类无法析构的问题
+考虑如下情况：当通过工厂模式得到一个基类指针指向的是派生类，delete这个基类指针的时候，如果基类的析构函数是非虚的，那么派生类就无法被析构，造成了局部析构现象，从而内存泄漏。
 将基类的析构函数设置为虚函数即可，一般有继承的情况下都设置为虚函数，当然这也会增加类大小。这是因为：
 
 - **有虚函数所在的类，会生成一个虚函数表存储虚函数地址**
@@ -133,3 +134,14 @@ class MyClass {
     typename T::SubType member;  // 这里的typename告诉编译器T::SubType是类型
 };
 ```
+
+# 17.构造函数能否是虚函数
+构造函数不能是虚函数，从技术上：当一个类有虚函数的时候，编译器会为该类生成一个虚函数表vtable，而当实例化该类时，会有一个指向虚函数表的指针vptr，在构造函数执行的时候，vptr还没有被正确初始化，如果是虚函数，自然无法通过vptr找到正确的函数实现。
+
+# 18.析构函数能否抛出异常
+析构函数不应该抛出异常，C++11后默认析构函数是noexcept的，也就是不会抛出异常。实在要抛出要不就吞下异常，要不就提供给用户显式处理方法。
+
+# 19.shared_ptr导致内存泄漏可能的原因？
+- **循环引用**
+- **自引用**
+- **静态变量持有shared_ptr**
