--- a/_pages/2025-08-14-C++并发编程.md
+++ b/_pages/2025-08-14-C++并发编程.md
@@ -20,3 +20,7 @@ A等待B释放锁，B等待A释放锁，就形成死锁。
 
 # 4.在一个线程中sleep(1000)，将使得该线程在多少时间后获得CPU的控制(假设睡眠过程中不会有其他事件唤醒该线程)？
 大于等于1000ms，一般多15ms左右，取决于系统调度和时钟精度。
+
+# 5.解释下并发和并行
+
+# 6.如果有50个线程对一块资源进行访问，怎么调度
