"新增运控项目总结，新增网络调试工具总结"

--- a/_pages/2025-08-18-C++网络编程.md
+++ b/_pages/2025-08-18-C++网络编程.md
@@ -33,3 +33,44 @@ UDP不用连接且快速，但是不保证顺序。
 - **异常处理**
 
 # 3.描述四次挥手的过程
+
+# 4.串口助手的项目总结
+## 主界面
+- 左/右上两边为网络设置和窗口设置，包括协议类型、地址、端口号、串口号、波特率等
+- 左/右下为接受区设置，包括自动换行显示，十六进制显示，保存数据和清除显示等
+- 中间为网络数据接收区和串口数据接收区
+- 在接受区分别是网络数据发送区和窗口数据发送区
+
+## 架构
+- 服务器管理器、客户端管理器和串口管理器
+- 会话层
+- 逻辑层
+
+### 服务器管理器
+- 开始监听时先尝试绑定一次判断该端口是否可用，在创建accpet对象，开始监听
+- 从线程池里拿到上下文，创建一个会话，异步接受连接，绑定连接完成的回调函数
+- 如果连接客户端成功，调用回调函数，会话层开始通话，接收下一次连接
+  
+### 客户端管理器
+- 先根据给定地址和端口号，尝试绑定一次判断该端口是否可用，再创建socket
+- 创建会话，会话层开始通话
+
+### 串口管理器
+- 创建窗口对象，连接给定的串口号，设置波特率、校验位等
+- 创建会话，开始通话
+
+### 会话层
+- 查看缓存区是否还要数据，如果有则读取一次并抛弃，然后开始读取
+- 异步读取，绑定读取完成回调函数
+- 读取回调函数，将读取的数据封装成包，发送给逻辑层处理，接收下一次读取
+- 提供发送数据接口
+
+### 逻辑层
+- 创建工作线程，不断处理消息
+- 若队列为空则用条件变量阻塞等待，否则将读取的数据传送给GUI显示，将发送的数据调用会话层的发送接口发送数据
+- 提供post数据到队列的接口
+
+### 特点
+- 会话层创建socket，如果是服务器的话，会话层会根据服务器从线程池里拿到的上下文创建socket；如果是客户端，则使用右移socket
+- 生产者消费者模型，session是生成者，逻辑层是消费者
+- 线程池，创建给定数量的线程，每个线程管理一个io_context
