--- a/_pages/2025-09-05-C++笔试.md
+++ b/_pages/2025-09-05-C++笔试.md
@@ -193,3 +193,25 @@ class A : public singleton<A>
     friend class singleton<A>;
 };
 ```
+
+# 9.多态问题，父类指针或引用指向子类对象时，调用虚函数
+```cpp
+class base {
+public:
+    virtual void print() { cout << "base print" << endl; }
+};
+
+class child : public base {
+public:
+    void print() override { cout << "child print" << endl; }
+};
+
+base *b = new child();
+b->print();
+```
+b调用的是child的print()方法。如果print方法不是虚函数，那么就是调用的父类的print()方法，因为派生类构造的时候也构建了子类；但如果是虚函数，那么根据vptr指向了派生类的print()方法。
+
+关键要理解：在构造的过程中，先构造父类，将父类的vptr指向了父类的虚函数表；再构造子类，再次设置vptr指向子类的虚函数表。
+- 每个虚函数对象都有一个vptr
+- 在构造的过程中，vptr会被多次设置
+- vptr指向了最后被调用构造函数所属类的虚函数表
