--- a/_pages/2025-11-14-opencv学习.md
+++ b/_pages/2025-11-14-opencv学习.md
@@ -7,3 +7,11 @@ layout: post
 ---
 
 ---
+
+### 1.cv::Mat是opencv提供存储矩阵数据的类，采用类似智能指针的引用计数的方式来自动管理内存
+
+### 2.cv::Mat的数据结构决定了每个元素/像素的数据类型；而通道则表示每个元素/像素的数据结构。例如CV_8UC3表示8位无符号整型，而C3表示每个像素是3个值的，如RGB
+
+### 3.cv::Mat进行赋值或者拷贝构造时候，是浅拷贝；如果需要深拷贝，需要调用clone()函数
+
+### 4.cv::Mat中用Size进行构造时需要注意，size的构造的行列是反的，Size（cols,rows）
